<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wifi_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_ssid"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_wifi_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wifi_ssid"
        android:layout_margin="30dp" />

    <TextView
        android:id="@+id/label_wifi_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_wifi_ssid"
        android:layout_margin="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_wifi_password"
        android:hint="@string/wifi_password_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_wifi_password"
        android:layout_margin="30dp" />

    <TextView
        android:id="@+id/label_serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_wifi_password"
        android:layout_margin="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_serial_number"
        android:hint="@string/serial_number_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_serial_number"
        android:layout_margin="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_request_connection"
        android:text="@string/request_connection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_serial_number"
        android:layout_margin="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>